--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -5,3 +5,5 @@
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
