--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
-<div class="container" style="margin-top: 140px;">
-    <app-shop></app-shop>
+<div>
+    <router-outlet></router-outlet>
 </div>
