--- a/client/src/app/core/nav/nav.component.html
+++ b/client/src/app/core/nav/nav.component.html
@@ -1,9 +1,11 @@
 <div class="d-flex flex-column flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-    <a class="navbar-brand" href="#">Ashwood Estates</a>
+    <h2 class="navbar-brand" routerLink="/">Ashwood Estates</h2>
     <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: larger;">
-        <a class="p-2 text-dark" href="#">Home</a>
-        <a class="p-2 text-dark" href="#">Shop</a>
-        <a class="p-2 text-dark" href="#">About</a>
+        <a class="p-2" routerLink="/" routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact: true}">Home</a>
+        <a class="p-2" routerLink="/products" routerLinkActive="active">Products</a>
+        <a class="p-2">Membership</a>
+        <a class="p-2" href="#">About</a>
     </nav>
     <div class="d-flex align-items-center">
         <a class="position-relative">
