--- a/client/src/app/core/nav/nav.component.scss
+++ b/client/src/app/core/nav/nav.component.scss
@@ -1,3 +1,16 @@
+a {
+    text-decoration: none;
+    color: #777;
+
+    &.active {
+        color: #333;
+    }
+
+    &:hover {
+        color: #333;
+    }
+}
+
 .cart-no {
     position: absolute;
     min-height: 25px;
@@ -14,4 +27,12 @@
 .navbar-brand {
     font-family: 'Great Vibes', cursive;
     font-size: 2em;
-  }
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    &:focus {
+        outline: none;
+    }
+}
