--- a/client/src/app/core/nav/nav.component.html
+++ b/client/src/app/core/nav/nav.component.html
@@ -5,7 +5,7 @@
             [routerLinkActiveOptions]="{exact: true}">Home</a>
         <a class="p-2" routerLink="/products" routerLinkActive="active">Products</a>
         <a class="p-2">Membership</a>
-        <a class="p-2" href="#">About</a>
+        <a class="p-2" routerLink="/test-error" routerLinkActive="active">Errors</a>
     </nav>
     <div class="d-flex align-items-center">
         <a class="position-relative">
