--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,9 @@
+<ngx-spinner>
+    <h3 class="loading-text">Loading...</h3>
+</ngx-spinner>
+
 <app-nav></app-nav>
+<app-section-header></app-section-header>
 <div>
     <router-outlet></router-outlet>
 </div>
