--- a/client/src/app/core/nav/nav.component.html
+++ b/client/src/app/core/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
     <h2 class="navbar-brand" routerLink="/">Ashwood Estates</h2>
-    <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: larger;">
+    <nav class="my-2 my-md-0 mr-md-3 text-uppercase">
         <a class="p-2" routerLink="/" routerLinkActive="active"
             [routerLinkActiveOptions]="{exact: true}">Home</a>
         <a class="p-2" routerLink="/products" routerLinkActive="active">Products</a>
