--- a/client/src/app/core/nav/nav.component.scss
+++ b/client/src/app/core/nav/nav.component.scss
@@ -1,13 +1,13 @@
 a {
     text-decoration: none;
-    color: #777;
+    color: #659225;
 
     &.active {
-        color: #333;
+        color: #365c02;
     }
 
     &:hover {
-        color: #333;
+        color: #365c02;
     }
 }
 
