--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,16 +1,17 @@
-<div class="container" style="margin-top: 140px;">
+<div class="container mt-3">
     <div class="row">
 
         <section class="col-3">
-            <h5 class="text-warning ms-3 my-3">Sort</h5>
-            <select class="form-select mb-3" (change)="onSortSelected($event.target.value)">
+            <ng-container *ngIf="productCategories">
+            <h5 class="text-warning ms-2 mt-5">Sort</h5>
+            <select class="form-select my-3" (change)="onSortSelected($event.target.value)">
                 <option *ngFor="let sort of sortOptions"
                         [value]="sort.value">
                     {{sort.name}}
                 </option>
             </select>
 
-            <h5 class="text-warning ms-3 my-3">Categories</h5>
+            <h5 class="text-warning ms-2 mt-4 mb-3">Categories</h5>
             <ul class="list-group">
                 <li class="list-group-item category-filter"
                     *ngFor="let category of productCategories"
@@ -21,6 +22,7 @@
                     {{category.name}}
                 </li>
               </ul>
+            </ng-container>
         </section>
 
         <section class="col-9">
@@ -32,9 +34,9 @@
                     [pageNumber]="this.shopParams.pageNumber"
                 ></app-paging-header>
 
-                <div class="form-inline mt-2">
+                <div class="form-inline mt-2" *ngIf="products">
                     <input (keyup.enter)="onSearch()" class="form-control me-2" #search style="width: 300px;" placeholder="Search" type="text" />
-                    <button class="btn btn-outline-primary my-2" (click)="onSearch()">Search</button>
+                    <button class="btn btn-outline-warning my-2" (click)="onSearch()">Search</button>
                     <button class="btn btn-outline-success ms-2 my-2" (click)="onReset()">Reset</button>
                 </div>
             </div>
