--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,16 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
 
-/* Importing Bootstrap SCSS file. */
-@import "~bootstrap/scss/bootstrap";
-
-/* Importing Datepicker SCSS file. */
-@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
-
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins&display=swap');
 
 body, html {
-    background-color: #efefef;
     height: 100%;
     margin: 0;
     font-family: "Poppins", Helvetica, sans-serif;
+}
+
+.xng-breadcrumb-root {
+    padding: 8px 16px;
+    display: inline;
+    border-radius: 0;
+}
+
+label.xng-breadcrumb-trail {
+    margin-bottom: 0;
+    color: #333;
+}
+
+.xng-breadcrumb-separator {
+    padding: 0;
 }
