--- a/client/src/app/core/nav/nav.component.scss
+++ b/client/src/app/core/nav/nav.component.scss
@@ -13,15 +13,15 @@ a {
 
 .cart-no {
     position: absolute;
-    min-height: 25px;
-    min-width: 25px;
+    min-height: 15px;
+    min-width: 15px;
     border-radius: 50%;
-    font-size: 1em;
-    background: blue;
+    font-size: .75em;
+    background: #F47C3C;
     color: white;
     text-align: center;
-    top: -12px;
-    right: 32px;
+    top: -8px;
+    right: 39px;
 }
 
 .navbar-brand {
